	PR tree-optimization/33856 	* tree-data-ref.c (get_references_in_stmt): Don't add 	REFERENCE_CLASS_P trees to references vector if get_base_address 	returns NULL on them.

* gcc.c-torture/compile/20071027-1.c: New test.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@129897 138bc75d-0d04-0410-961f-82ee72b054a4